# ALXR

./: .gitmodules  Cargo.toml  about.toml
.cargo/: config.toml
.github/workflows/: prepare-alxr-release.yml  prepare-release.yml  rust.yml
alvr/audio/: Cargo.toml
alvr/client/: Cargo.toml
alvr/commands/: Cargo.toml
alvr/common/: Cargo.toml
alvr/filesystem/: Cargo.toml
alvr/launcher/: Cargo.toml
alvr/openxr-client/alxr-android-client/: Cargo.toml
alvr/openxr-client/alxr-android-client/lynx/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico-v4/: Cargo.toml
alvr/openxr-client/alxr-android-client/quest/: Cargo.toml
alvr/openxr-client/alxr-android-client/src/: lib.rs  wifi_manager.rs
alvr/openxr-client/alxr-client/: Cargo.toml
alvr/openxr-client/alxr-client-android/: Cargo.toml
alvr/openxr-client/alxr-client-android/pico/: Cargo.toml
alvr/openxr-client/alxr-client-android/src/: lib.rs
alvr/openxr-client/alxr-client/src/: main.rs
alvr/openxr-client/alxr-client/uwp/: Cargo.toml  cargo_build_uwp.bat  (+1 more)
alvr/openxr-client/alxr-common/: Cargo.toml
alvr/openxr-client/alxr-engine-sys/: Cargo.toml  build.rs
alvr/server/: Cargo.toml
alvr/server/src/: connection.rs  graphics_info.rs
alvr/session/: Cargo.toml
alvr/sockets/: Cargo.toml
alvr/sockets/src/: packets.rs
alvr/vrcompositor-wrapper/: Cargo.toml
alvr/vulkan-layer/: Cargo.toml
alvr/xtask/: Cargo.toml
alvr/xtask/src/: main.rs  packaging.rs  version.rs
packaging/deb/: control
packaging/rpm/: alvr.spec
(+16 files in other folders)
