[workspace]
resolver = "2"
members = [
    "alvr/settings-schema-derive",
    "alvr/settings-schema",
    "alvr/filesystem",
    "alvr/common",
    "alvr/commands",
    "alvr/session",
    "alvr/sockets",
    "alvr/audio",
    "alvr/client",
    "alvr/server",
    "alvr/launcher",
    "alvr/vrcompositor-wrapper",
    "alvr/vulkan-layer",
    "alvr/openxr-client/alxr-engine-sys",
    "alvr/openxr-client/alxr-common",
    "alvr/openxr-client/alxr-client",
    "alvr/openxr-client/alxr-client/uwp",
    "alvr/openxr-client/alxr-client-android",
    "alvr/openxr-client/alxr-client-android/pico",
    "alvr/xtask",
]
